Bug 1825618: CroppedSelectionRanges: Binary search selection ranges instead of cropping every range. r=nlapre

Previously, we called Crop on every range.
Among other things, that has to calculate common parents, which gets very slow with lots of ranges.
Since the selection ranges are sorted by position in the document, we can binary search to find the overlapping ranges instead.

This required a fix to TextPoint::operator<, which previously returned an incorrect result when comparing a descendant point with an ancestor point.

Differential Revision: https://phabricator.services.mozilla.com/D233622